# CANVAS

./: .gitignore  .gitmodules  README.md  environment_full.yml  koopy_ori_stochastic_interaction.py  main.py  main_program.py  pyproject.toml  run.sh  run_robot_sim_point_both.py  sample.py  save_ci (251001).py  save_ci.py  sim_raw_overlay.py  simulation.py  simulation_example_jh.py  simulation_example_jh_color_overlay.py  simulation_example_jh_snippets.py  simulation_gh.py  simulation_grid.py  simulation_mpc_adefde.py  simulation_mpc_lqt.py  simulation_mpc_lqt_mppi_mpc_compare.py  simulation_mpc_modified.py  simulation_mppi.py  simulation_mppi_lqt.py  simulation_past.py  simulation_spectrum.py  simulation_spectrum_mod.py  simulation_video_spectrum_mpl_contCI.py  simulation_video_spectrum_mpl_predCI.py  simulation_with_video.py  simulation_with_video_spectrum.py  simulation_with_video_spectrum_head.py  simulation_with_video_spectrum_head_feedback_simplicity.py  simulation_with_video_spectrum_head_mpl.py  simulation_with_video_spectrum_head_mpl_temp.py  simulation_with_video_spectrum_head_pedestrian_limit.py  simulation_with_video_spectrum_head_robot.py
CANavi/: env_empty.py  predictor_CI.py  robot_sim.py  run_robot_ethucy.py  run_robot_ethucy_empty.py  run_robot_sim.py  run_robot_sim_point.py  run_robot_sim_point_both.py  run_robot_sim_point_both2.py  score_function.py  simulation copy.py  simulation(temp_250909).py  (+2 more)
CANavi/jackal_ws/src/gazebo-rossim/: CMakeLists (copy).txt  CMakeLists.txt  package.xml
CANavi/jackal_ws/src/jackal_gazebo/: CMakeLists.txt  package.xml
(+222 files in other folders)
